# magatsumi

./: Cargo.toml  README.md
crates/apperance/: Cargo.toml
crates/magatsumi-core/: Cargo.toml
crates/magatsumi-core/src/: lib.rs
crates/magatsumi-core/src/collectors/: block.rs  log.rs  mod.rs
crates/utils/: Cargo.toml
crates/utils/src/: addresses.rs  config.rs  errors.rs  lib.rs  types.rs
