[workspace]

members = ["bin/magatsumi", "crates/magatsumi-core", "crates/portfolio", "crates/utils"]

default-member = "bin/magatsumi"

resolver = "3"

[workspace.dependencies]
alloy-primitives = "1.5.4"
alloy-provider = { version = "1.6.1", features = ["ws"] }
alloy-rpc-types = { version = "1.6.1", features = ["eth"] }
async-trait = "0.1.89"
anyhow = "1.0.100"
bytes = "1.11.1"
magatsumi-core = { path = "crates/magatsumi-core" }
rayon = "1.11.0"
tokio-stream = "0.1.18"
utils = { path = "crates/utils" }
