[package]
name = "utils"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-primitives.workspace = true
alloy-rpc-types.workspace = true
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio-stream.workspace = true
thiserror = "2.0.18"
